# fastmcp-calculator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
calculator/: __init__.py  cli.py  core.py  mcp_server.py
openspec/: project.md
openspec/archive/2026-06-14-add-github-actions-ci/: design.md  proposal.md  tasks.md
openspec/archive/2026-06-14-add-github-actions-ci/specs/ci/: spec.md
openspec/archive/2026-06-14-add-python-fastmcp-calculator/: design.md  proposal.md  tasks.md
openspec/archive/2026-06-14-add-python-fastmcp-calculator/specs/calculator/: spec.md
openspec/specs/calculator/: spec.md
openspec/specs/ci/: spec.md
tests/: test_cli.py  test_core.py  test_mcp_server.py
