[project]
name = "fastmcp-calculator"
version = "0.1.0"
description = "Terminal calculator with FastMCP server tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
calculator = "calculator.cli:main"
calculator-mcp = "calculator.mcp_server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calculator"]
